# HLAM-prototypes

./: CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
src/: CMakeLists.txt  Main.cpp  multiasset.rc  version.rc.in
src/application/: CMakeLists.txt  MultiAsset.cpp  MultiAsset.hpp
src/assets/: AssetLoaders.hpp  AssetSystem.hpp  CMakeLists.txt  IAssetLoader.hpp
src/assetsystems/: CMakeLists.txt
src/assetsystems/bsp/: BspAssetSystem.cpp  BspAssetSystem.hpp  CMakeLists.txt
src/assetsystems/bsp/ui/: BspMainWindow.cpp  BspMainWindow.hpp  BspMainWindow.ui  CMakeLists.txt  SceneWidget.cpp  SceneWidget.hpp
src/assetsystems/sprite/: CMakeLists.txt  SpriteAssetSystem.cpp  SpriteAssetSystem.hpp
src/assetsystems/sprite/ui/: CMakeLists.txt  SpriteMainWindow.cpp  SpriteMainWindow.hpp  SpriteMainWindow.ui
src/assetsystems/studiomodel/: CMakeLists.txt  StudioModelAssetSystem.cpp  StudioModelAssetSystem.hpp
src/assetsystems/wad/: CMakeLists.txt  WadAssetSystem.cpp  WadAssetSystem.hpp
src/assetsystems/wad/ui/: WadMainWindow.cpp  WadMainWindow.hpp  WadMainWindow.ui
src/formats/: CMakeLists.txt
src/formats/bsp/: BSPFile.cpp  BSPFile.hpp  CMakeLists.txt
src/formats/sprite/: CMakeLists.txt  SpriteFile.cpp  SpriteFile.hpp
src/formats/wad/: CMakeLists.txt  WadFile.cpp  WadFile.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/utils/: BinaryReader.hpp  CMakeLists.txt  IOutils.hpp
